--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "project for innovathon ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server",
+    "dev": "nodemon server"
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.9"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.13"
   }
 }
