--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "homepage": "https://github.com/Umang2023/JaggaCoda#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.9"
+    "mongoose": "^6.0.9",
+    "passport": "^0.5.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
