--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jaggacode",
+  "name": "juggacode",
   "version": "1.0.0",
   "description": "project for innovathon ",
   "main": "index.js",
