--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.9",
+    "node-fetch": "^2.6.5",
     "passport": "^0.5.0",
     "passport-google-oauth20": "^2.0.0"
   },
